first batch of exercise set 1

--- a/assignments/2023-08-21-exercises01.html
+++ b/assignments/2023-08-21-exercises01.html
@@ -42,17 +42,16 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 12:30 AM - 22 August, 2023 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 12:54 AM - 22 August, 2023 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2023-08-21-exercises01.pdf">PDF version</a>
 	  
 	  
         <ol>
-<li><p>For the sphere, <span class="math inline">\(S^2\)</span>, prove that:</p>
-<ol>
-<li><p>The stereographic projections from the north pole and south pole form an atlas.</p></li>
-<li><p>The</p></li>
-</ol></li>
+<li><p>Prove that any open subset of a smooth manifold is smooth.</p></li>
+<li><p>Prove that the product of smooth manifolds is smooth.</p></li>
+<li><p>Prove that any chart <span class="math inline">\(\phi : U \to \mathbb{R}^n\)</span> on a smooth manifold is a smooth map.</p></li>
+<li><p>Prove that if <span class="math inline">\(F : M \to N\)</span> and <span class="math inline">\(G : N \to P\)</span> are smooth maps between manifolds, then the composition <span class="math inline">\(G \circ F\)</span> is also smooth.</p></li>
 <li><p>Prove that if <span class="math inline">\(X_p\)</span> is a derivation at <span class="math inline">\(p\in M\)</span>, then <span class="math inline">\(X_p(c)=0\)</span> for any constant function <span class="math inline">\(c\)</span>.</p></li>
 </ol>
     </section>
