--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <ul>
 <li>Loring Tu. <em>An introduction to Smooth Manifolds</em>.</li>
 <li>Frank Warner. <em>Foundations of Differentiable Manifolds and Lie Groups</em>.</li>
-<li>Dennis Barden and Charles Thomas. <em>An Introduction to Differential Manifolds cover An Introduction to Differential Manifolds</em>.</li>
+<li>Dennis Barden and Charles Thomas. <em>An Introduction to Differential Manifolds</em>.</li>
 </ul>
 
     </section>
