first complete set for exercise 1

--- a/assignments/2023-08-21-exercises01.html
+++ b/assignments/2023-08-21-exercises01.html
@@ -42,7 +42,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 12:54 AM - 22 August, 2023 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 03:32 PM - 22 August, 2023 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2023-08-21-exercises01.pdf">PDF version</a>
 	  
@@ -53,6 +53,12 @@
 <li><p>Prove that any chart <span class="math inline">\(\phi : U \to \mathbb{R}^n\)</span> on a smooth manifold is a smooth map.</p></li>
 <li><p>Prove that if <span class="math inline">\(F : M \to N\)</span> and <span class="math inline">\(G : N \to P\)</span> are smooth maps between manifolds, then the composition <span class="math inline">\(G \circ F\)</span> is also smooth.</p></li>
 <li><p>Prove that if <span class="math inline">\(X_p\)</span> is a derivation at <span class="math inline">\(p\in M\)</span>, then <span class="math inline">\(X_p(c)=0\)</span> for any constant function <span class="math inline">\(c\)</span>.</p></li>
+<li><p>Given a point <span class="math inline">\(p\)</span> on a smooth manifold <span class="math inline">\(M\)</span>, let <span class="math inline">\(F_p\)</span> denote the ideal of germs that vanish at <span class="math inline">\(p\)</span>. Prove that the dual of the vector space <span class="math inline">\(F_p / F_p^2\)</span> is isomorphic to <span class="math inline">\(T_p(M)\)</span>.</p></li>
+<li><p>Given a smooth manifold <span class="math inline">\(M\)</span> and a curve <span class="math inline">\(\gamma : (-\epsilon, \epsilon) \to M\)</span> passing through a point <span class="math inline">\(p \in M\)</span> (i.e. <span class="math inline">\(\gamma(0)=p\)</span>), let <span class="math inline">\(\left[\gamma\right]_p\)</span> denote the equivalence class of paths under the following equivalence relation. <span class="math inline">\(\gamma_1 \sim \gamma_2\)</span> if and only if <span class="math inline">\(\frac{\mathrm{d}}{dt} (\phi \circ \gamma_1)|_{t=0}=\frac{\mathrm{d}}{dt} (\phi \circ \gamma_2)|_{t=0}\)</span>.</p>
+<ol>
+<li><p>Prove that the equivalence relation is independent of the chart <span class="math inline">\(\phi\)</span>.</p></li>
+<li><p>Given an equivalence class of paths, <span class="math inline">\(\left[\gamma\right]_p\)</span>, we can define a map <span class="math inline">\(\nu_{\left[\gamma\right]_p} : C_p^\infty(M) \to \mathbb{R}\)</span>, <span class="math inline">\(\nu_{\left[\gamma\right]_p}(f) = \frac{\mathrm{d}}{dt} f(\gamma(t))\)</span>. Prove that <span class="math inline">\(\nu_{\left[\gamma\right]_p}\)</span> is a derivation. Prove that the map <span class="math inline">\(\left[\gamma\right]_p \to \nu_{\left[\gamma\right]_p}\)</span> is a bijection.</p></li>
+</ol></li>
 </ol>
     </section>
 </article>
