--- a/assignments/2023-08-21-exercises01.html
+++ b/assignments/2023-08-21-exercises01.html
@@ -41,6 +41,8 @@
       <p>
 	
 	
+	<a href="../assignments/2023-09-01-exercises02.html" style="float:right" class="next">>></a>
+	
       </p>
 <p class="date"><strong>&nbsp;Last modified: 03:32 PM - 22 August, 2023 </strong></p>
 	  
@@ -69,6 +71,14 @@
 
     <h2>Latest exercise sheet</h2>
 <ul>
+    
+        <li>
+          <a href="../assignments/2023-09-01-exercises02.html">Exercise sheet 2</a>
+	   /
+	  <a href="../assignments/pdfs/2023-09-01-exercises02.pdf">PDF version</a>
+	  
+	  
+        </li>
     
         <li>
           <a href="../assignments/2023-08-21-exercises01.html">Exercise sheet 1</a>
