--- a/slides.html
+++ b/slides.html
@@ -52,6 +52,14 @@ These slides are meant to be viewed using  presentation mode of a PDF viewer (F5
 <ul>
     
         <li>
+          <a href="./assignments/2023-09-01-exercises02.html">Exercise sheet 2</a>
+	   /
+	  <a href="./assignments/pdfs/2023-09-01-exercises02.pdf">PDF version</a>
+	  
+	  
+        </li>
+    
+        <li>
           <a href="./assignments/2023-08-21-exercises01.html">Exercise sheet 1</a>
 	   /
 	  <a href="./assignments/pdfs/2023-08-21-exercises01.pdf">PDF version</a>
