--- a/assignments/2023-09-01-exercises02.html
+++ b/assignments/2023-09-01-exercises02.html
@@ -43,6 +43,8 @@
 	<a href="../assignments/2023-08-21-exercises01.html" class="prev"><<</a>
 	
 	
+	<a href="../assignments/2023-09-19-exercises03.html" style="float:right" class="next">>></a>
+	
       </p>
 <p class="date"><strong>&nbsp;Last modified: 01:29 AM -  2 September, 2023 </strong></p>
 	  
@@ -82,17 +84,17 @@
 <ul>
     
         <li>
-          <a href="../assignments/2023-09-01-exercises02.html">Exercise sheet 2</a>
+          <a href="../assignments/2023-09-19-exercises03.html">Exercise sheet 3</a>
 	   /
-	  <a href="../assignments/pdfs/2023-09-01-exercises02.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2023-09-19-exercises03.pdf">PDF version</a>
 	  
 	  
         </li>
     
         <li>
-          <a href="../assignments/2023-08-21-exercises01.html">Exercise sheet 1</a>
+          <a href="../assignments/2023-09-01-exercises02.html">Exercise sheet 2</a>
 	   /
-	  <a href="../assignments/pdfs/2023-08-21-exercises01.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2023-09-01-exercises02.pdf">PDF version</a>
 	  
 	  
         </li>
