--- a/assignments/2023-09-19-exercises03.html
+++ b/assignments/2023-09-19-exercises03.html
@@ -43,6 +43,8 @@
 	<a href="../assignments/2023-09-01-exercises02.html" class="prev"><<</a>
 	
 	
+	<a href="../assignments/2023-09-26-exercises04.html" style="float:right" class="next">>></a>
+	
       </p>
 <p class="date"><strong>&nbsp;Last modified: 03:32 PM - 20 September, 2023 </strong></p>
 	  
@@ -83,17 +85,17 @@
 <ul>
     
         <li>
-          <a href="../assignments/2023-09-19-exercises03.html">Exercise sheet 3</a>
+          <a href="../assignments/2023-09-26-exercises04.html">Exercise sheet 4</a>
 	   /
-	  <a href="../assignments/pdfs/2023-09-19-exercises03.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2023-09-26-exercises04.pdf">PDF version</a>
 	  
 	  
         </li>
     
         <li>
-          <a href="../assignments/2023-09-01-exercises02.html">Exercise sheet 2</a>
+          <a href="../assignments/2023-09-19-exercises03.html">Exercise sheet 3</a>
 	   /
-	  <a href="../assignments/pdfs/2023-09-01-exercises02.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2023-09-19-exercises03.pdf">PDF version</a>
 	  
 	  
         </li>
