--- a/assignments/2023-10-15-exercises05.html
+++ b/assignments/2023-10-15-exercises05.html
@@ -44,7 +44,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 03:22 AM - 15 October, 2023 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 03:32 AM - 15 October, 2023 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2023-10-15-exercises05.pdf">PDF version</a>
 	  
@@ -55,6 +55,8 @@
 <li><p>Let <span class="math inline">\(\omega_1, \omega_2, \ldots, \omega_k\)</span> denote 1-forms on <span class="math inline">\(M\)</span>. Prove that <span class="math inline">\((\omega_1 \wedge \omega_2 \wedge \ldots \wedge \omega_k)_p(X_1, \ldots, X_k)= det(\omega_i(X_j))\)</span> for any tangent vectors <span class="math inline">\(X_1, X_2,
     \ldots, X_k\)</span>.</p></li>
 <li><p>Prove that the exterior derivative, <span class="math inline">\(d : \oplus A^k(R^n) \to \oplus A^k(R^n)\)</span>, defined by <span class="math inline">\(df(X) = X(f)\)</span> and <span class="math inline">\(d(\Sigma a_I dx_1 \wedge \ldots dx^k) = \Sigma da_I \wedge x_1 \wedge \ldots dx^k\)</span>, satisfies <span class="math inline">\(d\circ d = 0\)</span></p></li>
+<li><p>Prove that a 1-form <span class="math inline">\(\omega\)</span> is smooth if and only if <span class="math inline">\(\omega(X):= \omega_p(X_p)\)</span> is a smooth function for every smooth vector field <span class="math inline">\(X\)</span>.</p></li>
+<li><p>Consider a smooth map <span class="math inline">\(F : M \to N\)</span>. Prove that <span class="math inline">\(d(F^*(\omega) = F^*(d\omega)\)</span></p></li>
 </ol>
     </section>
 </article>
