--- a/assignments/2023-10-15-exercises05.html
+++ b/assignments/2023-10-15-exercises05.html
@@ -43,6 +43,8 @@
 	<a href="../assignments/2023-09-26-exercises04.html" class="prev"><<</a>
 	
 	
+	<a href="../assignments/2023-11-02-exercises06.html" style="float:right" class="next">>></a>
+	
       </p>
 <p class="date"><strong>&nbsp;Last modified: 03:32 AM - 15 October, 2023 </strong></p>
 	  
@@ -69,17 +71,17 @@
 <ul>
     
         <li>
-          <a href="../assignments/2023-10-15-exercises05.html">Exercise sheet 5</a>
+          <a href="../assignments/2023-11-02-exercises06.html">Exercise sheet 6</a>
 	   /
-	  <a href="../assignments/pdfs/2023-10-15-exercises05.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2023-11-02-exercises06.pdf">PDF version</a>
 	  
 	  
         </li>
     
         <li>
-          <a href="../assignments/2023-09-26-exercises04.html">Exercise sheet 4</a>
+          <a href="../assignments/2023-10-15-exercises05.html">Exercise sheet 5</a>
 	   /
-	  <a href="../assignments/pdfs/2023-09-26-exercises04.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2023-10-15-exercises05.pdf">PDF version</a>
 	  
 	  
         </li>
