--- a/assignments/2023-11-02-exercises06.html
+++ b/assignments/2023-11-02-exercises06.html
@@ -44,7 +44,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 12:36 AM -  5 November, 2023 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 12:00 PM -  9 November, 2023 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2023-11-02-exercises06.pdf">PDF version</a>
 	  
@@ -54,7 +54,7 @@
 <li><p>Prove that every Lie group is orientable.</p></li>
 <li><p>Prove that if a manifold has trivial tangent bundle then it is orientable.</p></li>
 <li><p>Prove that the total space, <span class="math inline">\(T(M)\)</span> of a tangent bundle, <span class="math inline">\(\pi : T(M) \to M\)</span>, of a manifold <span class="math inline">\(M\)</span> is always orientable, even if <span class="math inline">\(M\)</span> is not orientable.</p></li>
-<li><p>Prove that <span class="math inline">\(F : M \to N\)</span> is a smooth map between compact manifolds <span class="math inline">\(M\)</span> and <span class="math inline">\(N\)</span>, and <span class="math inline">\(\omega\)</span> a smooth <span class="math inline">\(n\)</span>-form, where <span class="math inline">\(n\)</span> is the dimension of <span class="math inline">\(N\)</span>, then <span class="math inline">\(\int_M F^*(\omega) = \pm \int_N \omega\)</span></p></li>
+<li><p>Prove that <span class="math inline">\(F : M \to N\)</span> is a <em>diffeomorphism</em> between compact manifolds <span class="math inline">\(M\)</span> and <span class="math inline">\(N\)</span>, and <span class="math inline">\(\omega\)</span> a smooth <span class="math inline">\(n\)</span>-form, where <span class="math inline">\(n\)</span> is the dimension of <span class="math inline">\(N\)</span>, then <span class="math inline">\(\int_M F^*(\omega) = \pm \int_N \omega\)</span></p></li>
 <li><p>Compute <span class="math inline">\(H^k(\mathbb{R})\)</span> for each <span class="math inline">\(k\)</span>.</p></li>
 <li><p>Prove that an exact form on a compact manifold cannot be no-where vanishing (Hint: maxima and minuma). Using this, what can you deduce about <span class="math inline">\(H^n(M)\)</span> for an <span class="math inline">\(n\)</span>-dimensional compact, connected, and orientable, manifold <span class="math inline">\(M\)</span>?</p></li>
 </ol>
