--- a/assignments/2023-11-18-exercises07.html
+++ b/assignments/2023-11-18-exercises07.html
@@ -44,7 +44,7 @@
 	
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 12:50 PM - 18 November, 2023 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 02:30 PM - 18 November, 2023 </strong></p>
 	  
 	  <a href="../assignments/pdfs/2023-11-18-exercises07.pdf">PDF version</a>
 	  
@@ -52,7 +52,7 @@
         <ol>
 <li><p>For a smooth manifold <span class="math inline">\(M\)</span>, define the Euler Characteristic, <span class="math inline">\(\chi(M) := \Sigma_{k=0}^{n} (-1)^k H^k(M)\)</span>. Prove that if <span class="math inline">\(M = U \cup V\)</span>, where <span class="math inline">\(U\)</span> and <span class="math inline">\(V\)</span> are open subsets of <span class="math inline">\(M\)</span>, than <span class="math inline">\(\chi(M) = \chi(U) + \chi(V) - \chi(U \cap V)\)</span>.</p></li>
 <li><p>Compute <span class="math inline">\(H_k(S^n)\)</span> for each <span class="math inline">\(k \geq 0\)</span> and <span class="math inline">\(n \geq 2\)</span>.</p></li>
-<li><p>Compute <span class="math inline">\(H_k(T)\)</span> for each <span class="math inline">\(k \geq 0\)</span></p></li>
+<li><p>Compute <span class="math inline">\(H_k(T)\)</span> for each <span class="math inline">\(k \geq 0\)</span> where <span class="math inline">\(T\)</span> is the torus.</p></li>
 </ol>
     </section>
 </article>
